--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -1,24 +1,24 @@
 body {
     /* IE10 Consumer Preview */ 
-  background-image: -ms-linear-gradient(top, #FFD96E 0%, #FFBB55 100%);
+  background-image: -ms-linear-gradient(top, #E0E0E0 0%, #FFFFFF 100%);
 
   /* Mozilla Firefox */ 
-  background-image: -moz-linear-gradient(top, #FFD96E 0%, #FFBB55 100%);
+  background-image: -moz-linear-gradient(top, #E0E0E0 0%, #FFFFFF 100%);
 
   /* Opera */ 
-  background-image: -o-linear-gradient(top, #FFD96E 0%, #FFBB55 100%);
+  background-image: -o-linear-gradient(top, #E0E0E0 0%, #FFFFFF 100%);
 
   /* Webkit (Safari/Chrome 10) */ 
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFD96E), color-stop(1, #FFBB55));
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #E0E0E0), color-stop(1, #FFFFFF));
 
   /* Webkit (Chrome 11+) */ 
-  background-image: -webkit-linear-gradient(top, #FFD96E 0%, #FFBB55 100%);
+  background-image: -webkit-linear-gradient(top, #E0E0E0 0%, #FFFFFF 100%);
 
   /* W3C Markup, IE10 Release Preview */ 
-  background-image: linear-gradient(to bottom, #FFD96E 0%, #FFBB55 100%);
+  background-image: linear-gradient(to bottom, #E0E0E0 0%, #FFFFFF 100%);
 
   /* IE6,IE7,IE8,IE9 */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFD96E', endColorstr='#FFBB55',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E0E0E0', endColorstr='#FFFFFF',GradientType=0 );
 
   background-attachment: fixed;
   
@@ -26,18 +26,19 @@ body {
 }
 
 /* Index */
-#leftMenu{
-	position:absolute;
-	top:50px;
-	left:0%;
-	
-	width: 125px;
+#leftMenu{	
+	background-color:rgb(51, 51, 51);
+	border-right-color: rgb(16, 16, 16);
+	height:100%;
 }
 
-#content{
-	position:absolute;
-	top:50px;
-	left:125px;
+#content{	
+	height:100%;
+}
+
+#wrapper{
+	height:100%;
+	//padding-top:50px;
 }
 
 /* End of Index */
